tests/rustdoc-ui/intra-doc/arg.stderr
error: argument `x` does not exist
  --> $DIR/arg.rs:27:10
   |
LL |     /// [arg@x]
   |          ^^^^^
   |
note: the lint level is defined here
  --> $DIR/arg.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: argument `x` does not exist
  --> $DIR/arg.rs:4:6
   |
LL | /// [arg@x]
   |      ^^^^^

error: argument `x` does not exist
  --> $DIR/arg.rs:11:10
   |
LL |     /// [arg@x]
   |          ^^^^^

error: argument `x` does not exist
  --> $DIR/arg.rs:17:10
   |
LL |     /// [arg@x]
   |          ^^^^^

error: argument `x` does not exist
  --> $DIR/arg.rs:21:10
   |
LL |     /// [arg@x]
   |          ^^^^^

error: `arg@` disambiguator can only be used in the documentation of functions
  --> $DIR/arg.rs:32:6
   |
LL | /// [arg@a1]
   |      ^^^^^^

error: aborting due to 6 previous errors

